--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -116,3 +116,11 @@ a {
   justify-content: center;
   letter-spacing: -20px;
 }
+
+.radialContainer{
+  z-index: 1;
+  position: absolute;
+  height: 100%;
+  width:100%;
+  background: linear-gradient(to bottom, rgb(123, 8, 255, 0.9), rgb(123, 8, 255,0.87));
+}
