--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,11 +8,42 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  cursor: none;
 }
 
-a {
+*::selection {
+  background-color: #B53145;
+  color: #000000;
+}
+
+.custom-cursor {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  pointer-events: none;
+  z-index: 9999;
+  mix-blend-mode: difference;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+}
+
+.cursor-text {
+  font-size: 5px;
+  font-weight: 900;
+  letter-spacing: 1px;
+  display: none;
+}
+
+a, button, video, image, svg {
   color: inherit;
   text-decoration: none;
+  cursor: none !important;
 }
 
 #Capa_1 {
