--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,12 +25,11 @@ body {
   border-radius: 50%;
   pointer-events: none;
   z-index: 9999;
-  mix-blend-mode: difference;
   padding: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: white;
+  background-color: rgba(181, 49, 69, .7);
 }
 
 .cursor-text {
