pills now working, lock scroll apparently working now

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,6 +35,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: white;
+  transform: translate(-50%, -50%);
 }
 
 .cursor-text {
